--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb  5 04:38:54 2002  Tim Janik  <timj@gtk.org>
+
+	* bsesequencer.[hc]: new mini sequencer.
+
 Fri Feb  1 02:16:02 2002  Tim Janik  <timj@gtk.org>
 
 	* bsesimpleosc.c:
