--- a/bse/TODO
+++ b/bse/TODO
@@ -1,9 +1,10 @@
 NEW:
+- get rid of parasites by means of using data pocket
 - alive keeping for waves which are removed, but whose index is in use?
 - loading (restore) may only work when not playing (to keep consistency
   and avoid lock contentions during playback)
 - during playback the set instruments needs to be fixed on a song  
-
+  
 OLD:
 general:
 -	delay class destruction and plugin unloading through timeout handlers
